Fixed bugs and improved examples

--- a/client/css/site.css
+++ b/client/css/site.css
@@ -17,10 +17,10 @@ ul {
 .page-3 li,
 .page-4 li,
 .page-5 li,
-.page-6 li {
+.page-6 li,
+.page-10 li {
   padding: 5px 10px;
   border: 1px solid #efc07a;
-  display: block;
   margin: 2px 0;
   width: 700px;
 }
@@ -28,21 +28,24 @@ ul {
 .page-3 li .date,
 .page-4 li .date,
 .page-5 li .date,
-.page-6 li .date {
+.page-6 li .date,
+.page-10 li .date {
   opacity: 0.5;
   margin-right: 20px;
 }
 .page-3 li,
 .page-4 li,
 .page-5 li,
-.page-6 li {
+.page-6 li,
+.page-10 li {
   -webkit-animation-duration: 1s;
   overflow: hidden;
 }
 .page-3 .animating,
 .page-4 .animating,
 .page-5 .animating,
-.page-6 .animating {
+.page-6 .animating,
+.page-10 .animating {
   -webkit-animation: insert-list-item 1s;
 }
 @-webkit-keyframes insert-list-item {
@@ -81,30 +84,36 @@ ul {
 }
 .page-4 li,
 .page-5 li,
-.page-6 li {
+.page-6 li,
+.page-10 li {
   color: #555555;
 }
 .page-4 li:hover,
 .page-5 li:hover,
-.page-6 li:hover {
+.page-6 li:hover,
+.page-10 li:hover {
   border-color: #cf861a;
   color: #000000;
   cursor: pointer;
 }
-.page-6 i {
+.page-6 i,
+.page-10 i {
   opacity: .2;
   box-sizing: border-box;
   border: 1px solid transparent;
   padding-right: 16px;
   padding-bottom: 16px;
 }
-.page-6 li:hover i {
+.page-6 li:hover i,
+.page-10 li:hover i {
   transition: opacity 0.8s ease-out 0.2s;
   opacity: 1;
 }
-.page-6 i:hover {
+.page-6 i:hover,
+.page-10 i:hover {
   border: 1px solid #555555;
 }
-.page-6 .deleting {
+.page-6 .deleting,
+.page-10 .deleting {
   -webkit-animation: insert-list-item2 1s reverse;
 }
