--- a/src/less/site.less
+++ b/src/less/site.less
@@ -18,11 +18,10 @@ ul{
 	padding: 5px 0;
 }
 
-.page-2, .page-3, .page-4, .page-5, .page-6{
+.page-2, .page-3, .page-4, .page-5, .page-6, .page-10{
 	li{
 		padding: 5px 10px;
 		border: 1px solid darken(@bg-color, 15%);
-		display: block;
 		margin: 2px 0;
 		width: 700px;
 		.date{
@@ -32,7 +31,7 @@ ul{
 	}
 }
 
-.page-3, .page-4, .page-5, .page-6{
+.page-3, .page-4, .page-5, .page-6, .page-10{
 	li{
 		-webkit-animation-duration: 1s;
 		overflow: hidden;
@@ -56,7 +55,7 @@ ul{
 	100% { height: 21px; padding: 5px 10px; opacity: 1 }
 }
 
-.page-4, .page-5, .page-6{
+.page-4, .page-5, .page-6, .page-10{
 	li{ color: @gray; }
 	li:hover{
 		border-color: darken(@bg-color, 40%);
@@ -65,7 +64,7 @@ ul{
 	}
 }
 
-.page-6{
+.page-6, .page-10{
 	i{ 
 		opacity: .2; 
 		box-sizing: border-box;
